[project]
name = "apply-tg-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Ermek",email = "2304.01013@manas.edu.kg"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
